--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "easyvuecli",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,6 @@
     "ejs": "^3.1.8"
   },
   "bin": {
-    "easyvuecli": "./index.js"
+    "easyvuecli": "./main.js"
   }
 }
