--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easyvuecli",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "zgl",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "commander": "^9.2.0",
     "ejs": "^3.1.8"
   },
